# grpc-rust

./: .gitignore  .rustfmt.toml  .travis.yml  .travis.yml-disabled  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build-all.sh  cargo.sh  gen-rs.sh  protoc.sh  test.sh  update-version.sh
.github/linters/: .markdown-lint.yml
.github/workflows/: ci.yml
ci/: install-protobuf.sh  run.sh
ci-gen/: Cargo.toml  README.md
ci-gen/src/: main.rs
docs/: FAQ.md
grpc/: Cargo.toml
grpc-compiler/: Cargo.toml  README.md
grpc-compiler/src/: codegen.rs  lib.rs
grpc-compiler/test-protoc-plugin/: Cargo.toml  fgfg.proto  gen.sh
grpc-compiler/test-protoc-plugin/src/: .gitignore  fgfg.rs  fgfg_grpc.rs  lib.rs
grpc-examples/: Cargo.toml  README.md  build.rs  gen-rs.sh
grpc-examples/greeter/: Cargo.toml  build.rs  get-go-greeter.sh
grpc-examples/greeter/src/: .gitignore  gen-certs.sh  lib.rs
grpc-examples/route_guide/: Cargo.toml  build.rs  get-go-route-guide.sh
grpc-examples/route_guide/src/: .gitignore  client.rs  lib.rs  server.rs  test.rs
grpc-examples/src/: foobar.com.p12  helloworld.rs  helloworld_grpc.rs  lib.rs  root-ca.der  route_guide.rs  route_guide_grpc.rs
grpc-protobuf/: Cargo.toml
grpc-protobuf/src/: lib.rs
grpc/src/: arc_or_static.rs  assert_types.rs  bytesx.rs  chars.rs  client.rs  client_stub.rs  error.rs  for_test.rs  futures_grpc.rs  grpc.rs  grpc_frame.rs  grpc_http_to_response.rs  iter.rs  lib.rs  marshall.rs  metadata.rs  method.rs  misc.rs  prelude.rs  protobuf.rs  req.rs  resp.rs  result.rs  rt.rs  server.rs  stream_item.rs
grpc/src/bytesx/: buf_eq.rs  buf_vec_deque.rs  bytes_deque.rs  bytes_vec_deque.rs  iter_buf.rs  mod.rs
grpc/src/client/: http_request_to_grpc_frames_typed.rs  http_response_to_grpc_frames.rs  http_response_to_grpc_frames_typed.rs  mod.rs  req_sink.rs  types.rs
grpc/src/common/: http_sink.rs  mod.rs  sink.rs  types.rs
grpc/src/futures_misc/: stream_single.rs
grpc/src/or_static/: arc.rs  mod.rs  string.rs
grpc/src/proto/: grpc_frame.rs  grpc_frame_parser.rs  grpc_status.rs  headers.rs  metadata.rs  mod.rs
grpc/src/server/: ctx.rs  method.rs  mod.rs  req_handler.rs  req_handler_unary.rs  req_single.rs  req_stream.rs  resp_sink.rs  resp_sink_untyped.rs  resp_unary_sink.rs  types.rs
grpc/tests/: client.rs  server.rs  simple.rs
grpc/tests/test_misc/: mod.rs  stream_thread_spawn_iter.rs  test_sync.rs
http2/: Cargo.toml
http2/src/: bytesx.rs  client.rs  client_conf.rs  client_conn.rs  client_tls.rs  http_client.rs  http_common.rs  http_server.rs  lib.rs  message.rs  misc.rs  resp.rs  server.rs  server_conf.rs  server_conn.rs  server_tls.rs  solicit_async.rs  solicit_misc.rs  tokio_oneshot.rs
http2/src/futures_misc/: mod.rs  sender_with_last.rs  shutdown_signal.rs  stream_concat.rs  stream_err.rs  stream_single.rs
http2/src/hpack/: decoder.rs  encoder.rs  huffman.rs  mod.rs
http2/src/solicit/: connection.rs  header.rs  mod.rs  session.rs
http2/src/solicit/frame/: bs_debug.rs  builder.rs  data.rs  flags.rs  goaway.rs  headers.rs  mod.rs  ping.rs  rst_stream.rs  settings.rs  window_update.rs
http2/src/solicit/tests/: common.rs  mod.rs
http2/tests/: http_client.rs  http_server.rs  http_tls.rs  http_tls.rs-disabled
http2/tests/test_misc/: http_servers.rs  mod.rs  server_echo.rs  server_one_conn.rs  tester.rs
interop/: .gitignore  Cargo.toml  README.md  build.rs  client-test.sh  gen-rs.sh  get-go-interop.sh  server-test.sh  server_test.sh  test.sh
interop/proto/: messages.proto  test.proto
interop/src/: .gitignore  client.rs  empty.rs  interop_client.rs  lib.rs  main.rs  messages.rs  server.rs  test_grpc.rs
interop/testdata/: server1.key  server1.pem
long-tests/: README.md  build-rs.sh  long_tests_pb.proto  run-test-go-server-rs-client.sh  run-test-helper.sh
long-tests/with-go/: gen-go.sh
long-tests/with-go/long_tests_client/: long_tests_client.go
long-tests/with-go/long_tests_pb/: long_tests_pb.pb.go
long-tests/with-go/long_tests_server/: long_tests_server.go
long-tests/with-rust/: Cargo.toml  build-rs.sh  build.rs  gen-rs.sh
long-tests/with-rust/src/: lib.rs  long_tests_pb.rs  long_tests_pb_grpc.rs
protoc-rust-grpc/: Cargo.toml  README.md
protoc-rust-grpc/src/: lib.rs
route-guide/: Cargo.toml  gen-rs.sh
route-guide/src/: lib.rs  route_guide.rs  route_guide_grpc.rs
src/: assert_types.rs  bytes_or_vec.rs  bytesx.rs  channel_sync_sender.rs  chars.rs  client.rs  client_async.rs  client_sync.rs  codegen.rs  error.rs  for_test.rs  futures_grpc.rs  futures_misc.rs  futures_stream_merge2.rs  futuresx.rs  grpc.rs  grpc_frame.rs  grpc_http_to_response.rs  grpc_protobuf.rs  http2_async.rs  http_client.rs  http_common.rs  http_server.rs  io_misc.rs  iter.rs  lib.rs  marshall.rs  metadata.rs  method.rs  misc.rs  protobuf.rs  req.rs  resp.rs  result.rs  rt.rs  server.rs  server_async.rs  server_method.rs  server_sync.rs  solicit_async.rs  (+3 more)
src/futures_misc/: channel_sync_sender.rs  future_flatten_to_stream.rs  future_to_stream_once.rs  mod.rs  stream_concat3.rs  stream_deferred.rs  stream_err.rs  stream_merge2.rs  stream_once.rs  stream_repeat.rs  stream_single.rs  stream_with_eof.rs  stream_with_eof_and_error.rs  task_data.rs
tests/: client.rs  http_server.rs  http_tls.rs  server.rs  simple.rs
tests/test_misc/: http_servers.rs  mod.rs  stream_thread_spawn_iter.rs  test_sync.rs
