[package]

name = "grpc"
version = "0.1.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of gRPC"
repository = "https://github.com/stepancheg/grpc-rust"
readme = "README.md"
keywords = ["grpc"]

[dependencies]
log             = "0.*"
#protobuf       = { path = "../rust-protobuf" }
#protobuf        = { git = "http://github.com/stepancheg/rust-protobuf" }
protobuf         = "1.*"
#futures         = { git = "https://github.com/alexcrichton/futures-rs" }
futures         = "0.*"
#futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
futures-cpupool = "0.*"
tokio-core      = "0.*"
tokio-io        = "0.*"
#tokio-tls       = { git = "https://github.com/tokio-rs/tokio-tls/", features = ["force-openssl"] }
#tokio-tls       = { git = "https://github.com/tokio-rs/tokio-tls/" }
tokio-tls       = "0.*"
httpbis         = { path = "http2", version = "0.1.1" }
bytes = "0.*"

openssl = { version = "0.8", optional = true }

[lib]
doctest = false

[workspace]
members = [
    "grpc-examples",
    "grpc-compiler",
    "long-tests/with-rust",
    "interop",
]

