[package]

name = "grpc"
version = "0.1.6"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of gRPC"
repository = "https://github.com/stepancheg/grpc-rust"
readme = "README.md"
keywords = ["grpc"]

[dependencies]
log             = "0.*"
#protobuf       = { path = "../rust-protobuf" }
#protobuf        = { git = "http://github.com/stepancheg/rust-protobuf" }
protobuf         = "1.*"
#futures         = { git = "https://github.com/alexcrichton/futures-rs" }
futures         = "0.*"
#futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
futures-cpupool = "0.*"
tokio-core      = "0.*"
tokio-io        = "0.*"
tokio-tls       = "0.*"
httpbis         = "0.*"
bytes = "0.*"
base64          = "0.*"

[lib]
doctest = false

[workspace]
members = [
    "grpc-examples",
    "grpc-compiler",
    "long-tests/with-rust",
    "interop",
]

