[package]

name = "grpc"
version = "0.1.10"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of gRPC"
repository = "https://github.com/stepancheg/grpc-rust"
readme = "README.md"
keywords = ["grpc"]

[dependencies]
log             = "0.*"
protobuf         = "1.*"
futures         = "0.*"
futures-cpupool = "0.*"
tokio-core      = "0.*"
tokio-io        = "0.*"
tokio-tls-api   = "0.*"
httpbis         = "0.2"
tls-api         = "0.*"
tls-api-stub    = "0.*"
bytes = "0.*"
base64          = "0.*"

[lib]
doctest = false

[workspace]
members = [
    "grpc-examples",
    "grpc-compiler",
    "long-tests/with-rust",
    "interop",
]

