[package]
name = "grpc-compiler"
version = "0.6.1"
description = "gRPC compiler for rust-grpc"
license = "MIT/Apache-2.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[dependencies]
protobuf         = { version = ">=2.8.0, <2.10.0" }
protobuf-codegen = { version = ">=2.8.0, <2.10.0" }

[[bin]]

name = "protoc-gen-rust-grpc"
test = false

[lib]

doctest = false
