[package]
name = "grpc-compiler"
version = "0.8.3"
description = "gRPC compiler for rust-grpc"
license = "MIT/Apache-2.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"

[dependencies]
protobuf = "~2.18.2"
protobuf-codegen = "~2.18.2"

[[bin]]

name = "protoc-gen-rust-grpc"
test = false

[lib]

doctest = false
