[package]
name = "grpc-compiler"
version = "0.9.0-pre"
description = "gRPC compiler for rust-grpc"
license = "MIT/Apache-2.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"

[dependencies]
protobuf = "2.23"
protobuf-codegen = "2.23"

[[bin]]

name = "protoc-gen-rust-grpc"
test = false

[lib]

doctest = false
