[package]
name = "grpc-examples"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[lib]
doctest = false

[dependencies.grpc]
path = ".."

[dependencies]
protobuf        = "1.*"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = "0.*"
httpbis         = "0.3.1"

[build-dependencies]
protoc-rust-grpc = { path = "../protoc-rust-grpc" }
