[package]
name = "grpc-examples"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[lib]
doctest = false
test = false

[dependencies.grpc]
path = "../grpc"

[dependencies]
protobuf        = "1.*"
futures         = "0.1"
futures-cpupool = "0.1"
tls-api         = "0.*"
httpbis         = "=0.4.3"

[build-dependencies]
protoc-rust-grpc = { path = "../protoc-rust-grpc" }

[[bin]]
name = "greeter_client"
test = false

[[bin]]
name = "greeter_client_multi"
test = false

[[bin]]
name = "greeter_server"
test = false

[[bin]]
name = "greeter_server_multi_server"
test = false
