[package]

name = "grpc-protobuf"
version = "0.9.0-pre"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Protobuf marshaller for gRPC"
repository = "https://github.com/stepancheg/grpc-rust"
readme = "../README.md"
keywords = ["grpc"]
edition = "2018"

[dependencies]
protobuf        = { version = "2", features = ["with-bytes"] }
grpc = { path = "../grpc", version = "=0.9.0-pre" }
bytes           = "0.5.*"

[lib]
doctest = false
