[package]

name = "grpc"
version = "0.9.0-pre"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of gRPC"
repository = "https://github.com/stepancheg/grpc-rust"
readme = "../README.md"
keywords = ["grpc"]
edition = "2018"

[dependencies]
log             = "0.4"
log-ndc         = "0.3"
futures         = "0.3.1"
tokio = { version = "1.2.0", features = ["io-util", "net", "time", "rt"] }
#httpbis         = "~0.9"
httpbis         = { git = "https://github.com/stepancheg/rust-http2", rev = "04410b1a07f937d94e075c813d05a68022f0c7c8" }
#httpbis         = { path = "../../rust-http2/httpbis" }
tls-api         = "0.6.0"
tls-api-stub    = "0.6.0"
bytes           = "1.0.1"
base64          = "0.13"

[dev-dependencies]
log-ndc-env-logger = "~0.3"
rand = "0.8.3"

[lib]
doctest = false
