[package]
name = "httpbis" # because name "http2" has already been claimed by another user
version = "0.1.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of HTTP/2 protocol"
repository = "https://github.com/stepancheg/grpc-rust"
keywords = ["http2"]

[dependencies]

log            = "0.*"
futures         = "0.*"
#futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
futures-cpupool = "0.*"
tokio-core      = "0.*"
tokio-io        = "0.*"
tokio-timer     = "0.*"
#tokio-tls       = { git = "https://github.com/tokio-rs/tokio-tls/", features = ["force-openssl"] }
#tokio-tls       = { git = "https://github.com/tokio-rs/tokio-tls/" }
tokio-tls       = "0.*"
net2 = "0.2"
bytes = "0.*"

[dev-dependencies]

env_logger = "0.*"
