[package]
name = "grpc-interop"
description = "Implementation of the grpc-interop service."
repository = "http://github.com/stephancheg/grpc-rust/interop"
version = "0.0.0"
authors = ["Steve Jenson <stevej@buoyant.io>"]
publish = false

[dependencies.grpc]
path = "../grpc"
[dependencies.grpc-protobuf]
path = "../grpc-protobuf"

[dependencies]
bytes           = "0.4.*"
log             = "0.4.*"
env_logger      = "~0.5"
protobuf        = "2"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
tls-api         = "0.2.*"
chrono          = "0.2.25"
clap            = "2.20.0"

[lib]
test = false
doctest = false

[[bin]]
name = "grpc-rust-interop-server"
path = "src/bin/interop_server.rs"
test = false

[[bin]]
name = "grpc-rust-interop-client"
path = "src/bin/interop_client.rs"
test = false

[build-dependencies]
protoc-rust-grpc = { path = "../protoc-rust-grpc" }
