[package]
name = "protoc-rust-grpc"
version = "0.6.2"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
homepage = "https://github.com/stepancheg/rust-protobuf/protoc-rust/"
repository = "https://github.com/stepancheg/rust-protobuf/protoc-rust/"
license = "MIT/Apache-2.0"
description = """
protoc --rust-grpc_out=... available as API. protoc needs to be in $PATH, protoc-gen-rust-grpc does not.
"""

[lib]
doctest = false
test = false

[dependencies]
protoc        = { version = ">=2.8.0, <2.10.0" }
protoc-rust   = { version = ">=2.8.0, <2.10.0" }
protobuf      = { version = ">=2.8.0, <2.10.0" }
grpc-compiler = { path = "../grpc-compiler", version = "=0.6.2" }
tempdir       = "0.3"
