[package]
name = "protoc-rust-grpc"
version = "0.8.3"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
homepage = "https://github.com/stepancheg/rust-protobuf/protoc-rust/"
repository = "https://github.com/stepancheg/rust-protobuf/protoc-rust/"
license = "MIT/Apache-2.0"
edition = "2018"
description = """
protoc --rust-grpc_out=... available as API. protoc needs to be in $PATH, protoc-gen-rust-grpc does not.
"""

[lib]
doctest = false
test = false

[dependencies]
protoc        = "~2.18.2"
protoc-rust   = "~2.18.2"
protobuf      = "~2.18.2"
grpc-compiler = { path = "../grpc-compiler", version = "=0.8.3" }
tempdir       = "0.3"
