[package]
name = "test-protoc-plugin"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false

[dependencies]
tls-api         = "0.3.*"
protobuf        = "2"
grpc            = { path = "../../grpc" }
grpc-protobuf   = { path = "../../grpc-protobuf" }

[lib]
test = false
doctest = false

[workspace]
