[package]
name = "grpc_examples_greeter"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"

[lib]
doctest = false
test = false

[dependencies.grpc]
path = "../../grpc"
[dependencies.grpc-protobuf]
path = "../../grpc-protobuf"

[dependencies]
protobuf        = "~2.18.2"
futures         = "0.3.*"
tls-api            = "0.4.*"
tls-api-native-tls = "0.4.*"
httpbis         = "~0.9"
env_logger      = "~0.5"

[build-dependencies]
protoc-rust-grpc = { path = "../../protoc-rust-grpc" }

[[bin]]
name = "greeter_client"
test = false

[[bin]]
name = "greeter_server"
test = false
