[package]
name = "grpc_examples_greeter"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"

[lib]
doctest = false
test = false

[dependencies.grpc]
path = "../../grpc"
[dependencies.grpc-protobuf]
path = "../../grpc-protobuf"

[dependencies]
protobuf        = "2.23"
futures         = "0.3.*"
tls-api         = "0.5.0"
tls-api-stub    = "0.5.0"
tls-api-native-tls = "0.5.0"
#httpbis         = "~0.9"
httpbis         = { git = "https://github.com/stepancheg/rust-http2" }
#httpbis         = { path = "../../../rust-http2/httpbis" }
env_logger      = "~0.5"

[build-dependencies]
protoc-rust-grpc = { path = "../../protoc-rust-grpc" }

[[bin]]
name = "greeter_client"
test = false

[[bin]]
name = "greeter_server"
test = false
