[package]
name = "long_tests"
version = "0.1.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[lib]
doctest = false

[dependencies.grpc]
path = "../.."

[dependencies]
log             = "0.3"
env_logger      = "0.3"
protobuf        = "1.*"
futures         = "0.1.2"
futures-cpupool = "0.1.2"
