[package]
name = "long_tests"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[lib]
doctest = false

[dependencies.grpc]
path = "../.."

[dependencies]
log             = "0.*"
env_logger      = "0.*"
protobuf        = "1.*"
tls-api         = "0.*"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
